change to java 8 code